--- a/styles.css
+++ b/styles.css
@@ -282,48 +282,34 @@ header label{
   margin-bottom:  20px;
 }
 
-/* -----Body Gender Main Page----- */
-.gender{
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  margin: 35px 0px;
+/* -----Fruits Thumbnail----- */
+.thumbnail-header{
+display: none;
 }
-.man, .women{
-  box-shadow: 0px 10px 8px rgba(0,0,0,0.15);
+
+.thumbnails__container{
+  padding: 35px;
+  display: grid;
+  grid-template-columns: auto auto;
+  place-content: center;
+  grid-auto-flow: row;
+  gap: 20px;
+}
+.thumbnails__container img{
+  object-fit: cover;
   width: 100%;
-  height:380px;
-  background-position-x:center;
-  position: relative;
-  box-sizing: border-box;
-  background-size: cover;
 }
-.man:hover, .women:hover{
+.thumbnails__container img:hover{
   transform: scale(1.028);
+  cursor: pointer;
 }
-.man{
-  background-image: url(/pictures/Man.jpg);
-  filter: contrast(90%);
-  background-position-y: top;
-  margin-right: 15px;
-  background-position: 50% 50%;
-}
-.women{
-  background-image: url(/pictures/Women.jpg);
-  filter: contrast(90%);
-  margin-top: 15px;
-}
-.man__content, .women__content{
-  color: var(--white-text-stronger);
-  position: absolute;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  line-height: 38px;
-  top: 80%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+
+
+
+
+
+
+
 
 
 /* -----Sign Up Forms----- */
@@ -1229,25 +1215,16 @@ input::placeholder{
     background-color: var(--grey);
     line-height: 33px;
   }
-  .gender{
-    flex-direction: row;
-    margin:  35px 35px;
-    gap: 35px;
+  .thumbnail-header{
+    display: block;
+    color: var(--black-text);
+    font-size: 2.4rem;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
   }
-  .gender > * {
-    flex: 1;
-  }
-  .man, .women{
-    max-width: 760px;
-    height:493px;
-    box-shadow: none;
-  }
-  .man{
-    background-position: center;
-  }
-  .women{
-    background-position: top;
-    margin: 0px 35px 0 0;
+  .thumbnails__container{
+    grid-template-columns: auto auto auto;
   }
   .home-text {
     margin: 60px 0;
